add elements login form

--- a/style.css
+++ b/style.css
@@ -149,10 +149,11 @@ body {
   }
 }
 
-
+/* ******login-form******** */
 
 
 .login-form {
   flex-grow: 1;
   height: 100%;
+  background-color: white;
 }
