update size capcha

--- a/style.css
+++ b/style.css
@@ -222,5 +222,10 @@ input[type="checkbox"], input[type="checkbox"] + label{
   .login-sub-title {
     font-size: 13px;
   }
+
+  .capcha{
+    width: 53px;
+    margin: 15px 48px 0 20px;
+  }
   
 }
